k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leafpan
  labels:
    name: leafpan
    environment: production
